// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders close correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Modal
        animated={true}
        hardwareAccelerated={false}
        supportedOrientations={
          Array [
            "portrait",
            "portrait-upside-down",
            "landscape",
            "landscape-left",
            "landscape-right",
          ]
        }
        transparent={true}
        visible={false}
      >
        <View
          accessible={true}
          focusable={true}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <BlurView
            blurAmount={10}
            blurType="light"
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          />
        </View>
      </Modal>
    </View>
  </View>
</View>
`;

exports[`renders open correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Modal
        animated={true}
        hardwareAccelerated={false}
        supportedOrientations={
          Array [
            "portrait",
            "portrait-upside-down",
            "landscape",
            "landscape-left",
            "landscape-right",
          ]
        }
        transparent={true}
        visible={true}
      >
        <View
          accessible={true}
          focusable={true}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <BlurView
            blurAmount={10}
            blurType="light"
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          />
        </View>
      </Modal>
    </View>
  </View>
</View>
`;

exports[`renders with incorrect initial value correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Modal
        animated={true}
        hardwareAccelerated={false}
        supportedOrientations={
          Array [
            "portrait",
            "portrait-upside-down",
            "landscape",
            "landscape-left",
            "landscape-right",
          ]
        }
        transparent={true}
        visible={true}
      >
        <View
          accessible={true}
          focusable={true}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <BlurView
            blurAmount={10}
            blurType="light"
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          />
        </View>
      </Modal>
    </View>
  </View>
</View>
`;
